Implement group event suggestion