@@ -7,6 +7,7 @@ import org.springframework.context.annotation.AnnotationConfigApplicationContext
 import usc.cs310.ProEvento.model.*;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.Set;
@@ -142,13 +143,43 @@ public class ProEventoDatabaseInitializer {
             testUserGroupUSC.setTag(tagLife);
             testUserGroupUSC.setMembers(new HashSet<>(Set.of(testUserTommy, testUserNeumann, testUserTuring)));
 
+            EventSuggestion testSuggestionOne = new EventSuggestion();
+            testSuggestionOne.setName("Dance All Night");
+            testSuggestionOne.setVotes(1);
+            testSuggestionOne.setStatus("ongoing");
+            testSuggestionOne.setDescription("Let's dance!");
+            testSuggestionOne.setTag(tagDance);
+            testSuggestionOne.setVoters(Set.of(testUserTommy));
+            testSuggestionOne.setDateTime(LocalDateTime.of(2021, 05, 15, 9, 0, 0));
+            testSuggestionOne.setUserGroup(testUserGroupUSC);
+
+            EventSuggestion testSuggestionTwo = new EventSuggestion();
+            testSuggestionTwo.setName("Video Game");
+            testSuggestionTwo.setVotes(2);
+            testSuggestionTwo.setStatus("ongoing");
+            testSuggestionTwo.setDescription("Video games that we love.");
+            testSuggestionTwo.setTag(tagGame);
+            testSuggestionTwo.setVoters(Set.of(testUserTommy, testUserTuring));
+            testSuggestionTwo.setDateTime(LocalDateTime.of(2021, 05, 15, 9, 0, 0));
+            testSuggestionTwo.setUserGroup(testUserGroupUSC);
+
             UserGroup testUserGroupCS = new UserGroup();
             testUserGroupCS.setName("Computer Scientists Group");
             testUserGroupCS.setFounder(testUserTuring);
             testUserGroupCS.setDescription("User group for computer scientists");
             testUserGroupCS.setAvatarUrl("");
             testUserGroupCS.setTag(tagTech);
-            testUserGroupCS.setMembers(new HashSet<>(Set.of(testUserTuring, testUserNeumann))   );
+            testUserGroupCS.setMembers(new HashSet<>(Set.of(testUserTuring, testUserNeumann)));
+
+            EventSuggestion testSuggestionThree = new EventSuggestion();
+            testSuggestionThree.setName("Best Programming Language");
+            testSuggestionThree.setVotes(0);
+            testSuggestionThree.setStatus("ongoing");
+            testSuggestionThree.setDescription("Best programming language.");
+            testSuggestionThree.setTag(tagTech);
+            testSuggestionThree.setVoters(Collections.emptySet());
+            testSuggestionThree.setDateTime(LocalDateTime.of(2021, 05, 15, 9, 0, 0));
+            testSuggestionThree.setUserGroup(testUserGroupCS);
 
             EventNotification testEventNotification = new EventNotification();
             testEventNotification.setContent("Event \'Best Songs for CSCI 310\' hosted by Tommy has been cancelled.");
@@ -159,6 +190,22 @@ public class ProEventoDatabaseInitializer {
             Set<User> s = new HashSet<>();
             s.add(testUserTuring);
             testEventNotification.setReceivers(s);
+
+            EventNotification testEventInvitation = new EventNotification();
+            testEventInvitation.setContent("Turing invites you to his event \"The First Video Game!\".");
+            testEventInvitation.setSender(testUserTuring);
+            testEventInvitation.setEvent(testEventTwo);
+            testEventInvitation.setDateTime(LocalDateTime.now());
+            testEventInvitation.setType("invite");
+            testEventInvitation.setReceivers(Set.of(testUserTommy, testUserNeumann));
+
+            EventNotification testEventRecording = new EventNotification();
+            testEventRecording.setContent("The recording of the event \"Best Songs for CSCI 310\" has been processing. It may take a couple of minutes for it to be available.");
+            testEventRecording.setSender(testUserTommy);
+            testEventRecording.setEvent(testEventOne);
+            testEventRecording.setDateTime(LocalDateTime.now());
+            testEventRecording.setType("record");
+            testEventRecording.setReceivers(Set.of(testUserTommy, testUserTuring, testUserNeumann));
 
             FollowRequestNotification testFollowRequestNotification = new FollowRequestNotification();
             testFollowRequestNotification.setSender(testUserNeumann);
@@ -200,12 +247,17 @@ public class ProEventoDatabaseInitializer {
             session.save(testAccountNeumann);
             session.save(testEventOne);
             session.save(testEventTwo);
+            session.save(testEventInvitation);
+            session.save(testEventRecording);
             session.save(testEventNotification);
             session.save(testInvitation);
             session.save(testFollowRequestNotification);
             session.save(testGroupRequestNotification);
             session.save(testUserGroupUSC);
             session.save(testUserGroupCS);
+            session.save(testSuggestionOne);
+            session.save(testSuggestionTwo);
+            session.save(testSuggestionThree);
             session.getTransaction().commit();
         } catch (Exception e) {
             e.printStackTrace();
